--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
             isGameDone = true;
         } else {
             console.log("nie wygrales jeszcze");
+            console.log("punkty z flag: " + countPointsFromFlag() + " punkty z pol " + countPointsFromFieldsReleased());
         }
     }
 
@@ -183,6 +184,9 @@
             for (var j = 0; j < 9; j++) {
                 if (bombsAndFlags[i][j].isBomb && bombsAndFlags[i][j].isFlag) {
                     numberOfPoints++;
+                }
+                if(!bombsAndFlags[i][j].isBomb && bombsAndFlags[i][j].isFlag) {
+                    numberOfPoints--;
                 }
             }
         }
