--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
 <div style="width: 50%; margin: 0 auto; text-align: center">
     <label>
-        Bomby<input type="number">
+        Bomby<input id="bombs" type="number" value="10">
     </label>
 
     <label>
-        Szerokość<input type="number">
+        Szerokość<input type="number" value="9">
     </label>
 
     <label>
-        Wysokość<input type="number">
+        Wysokość<input type="number" value="9">
     </label>
 
     <button style="display: inline-block" class="new-game-button" onclick="location.reload()">Start new game</button>
